--- a/plop-tpls/page/index.hbs
+++ b/plop-tpls/page/index.hbs
@@ -1,15 +1,13 @@
 <template>
-    <div>
-        <!-- Your content -->
-    </div>
+  <div>
+    <!-- Your content -->
+  </div>
 </template>
 
-<script setup name="{{ properCase componentName }}">
+<script setup lang="ts" name="{{ properCase componentName }}">
 // const { proxy } = getCurrentInstance()
 // const router = useRouter()
 // const route = useRoute()
 </script>
 
-<style lang="less" scoped>
-
-</style>
+<style lang="less" scoped></style>
